# skunkwork

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt  release_tools_blurb.txt  sync  text_gen.py  todo.txt
ext/: CMakeLists.txt
include/: audioStream.hpp  error.hpp  frameBuffer.hpp  gpuProfiler.hpp  gui.hpp  marched.hpp  quad.hpp  shader.hpp  texture.hpp  window.hpp
res/shader/: 2d_sdf.glsl  basic_frag.glsl  basic_vert.glsl  composite_frag.glsl  hg_sdf.glsl  mask_frag.glsl  noise.glsl  ray_marching_frag.glsl  render_quad_frag.glsl  shading.glsl  text_frag.glsl  tonemap.glsl  tri_frag.glsl  uniforms.glsl
src/: CMakeLists.txt  audioStream.cpp  error.cpp  frameBuffer.cpp  gpuProfiler.cpp  gui.cpp  main.cpp  main_skunktoy.cpp  main_skunkwork.cpp  marched.cpp  quad.cpp  shader.cpp  texture.cpp  window.cpp
sync/: sync.rocket  sync_time.track  sync_trees.track
